product/product-k8/product-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: productms-deploy
  namespace: shoppingportal
spec:
  replicas: 1
  selector:
    matchLabels:
      name: productms
      zone: prod
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        name: productms
        version: v1
        release: stable
        tier: be
        zone: prod
        managed-by: m2
    spec:
      containers:
        - name: productms-ctr
          image: metamagicglobal/productservice_k8
          imagePullPolicy: Always
          ports:
          - containerPort: 8082
