product/product-k8/productui_dep.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: productui-deploy
  namespace: shoppingportal
spec:
  replicas: 1
  selector:
    matchLabels:
      zone: prod
      app: productui
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        name: productui
        version: v1
        release: stable
        tier: fe
        zone: prod
        managed-by: m2
        app: productui
    spec:
      containers:
        - name: productui-ctr
          image: metamagicglobal/productui:k8 
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 80
