product/product-k8/productui_dep_v2.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: productui-deploy-canary
  namespace: shoppingportal
spec:
  replicas: 1
  selector:
    matchLabels:
      zone: prod
      app: productui
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        version: "2.0.0"
        release: stable
        tier: fe
        zone: prod
        managed-by: m2
        app: productui
    spec:
      containers:
        - name: productui-ctr
          image: metamagicglobal/productui_v2:k8 
          imagePullPolicy: Always
          ports:
          - containerPort: 80      
          livenessProbe:
            httpGet:
              path: /productui/appinfo.json
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 15
