product/product-k8/product-ms-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-svc
  namespace: shoppingportal
spec:
  selector: 
    app:  productms
  ports:
  - protocol: TCP
    targetPort: 8082
    port: 80
    name: http
