product/product-k8/product-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-svc
  namespace: shoppingportal
spec:
  type: LoadBalancer
  selector: 
    name: productms
  ports:
  - protocol: TCP
    targetPort: 8082
    port: 80
    name: http
