product/product-k8/product-ui-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: productui-svc
  namespace: shoppingportal
  labels:
    name: productuisvc
spec:
  selector:
        name: productui
        version: "1.0.0"
        release: stable
        tier: fe
        zone: prod
        managed-by: m2
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: my-http-port
